--- a/debian/changelog
+++ b/debian/changelog
@@ -4,8 +4,9 @@ indicator-application (0.2.90-0ubuntu4~ppa1) UNRELEASED; urgency=low
     * Removing service, lib only
     * Switching from dbus-glib to GDBus
   * Autogen
+  * debian/control: Removing the indicator-application bin package.
 
- -- Ted Gould <ted@ubuntu.com>  Wed, 08 Dec 2010 15:34:18 -0600
+ -- Ted Gould <ted@ubuntu.com>  Wed, 08 Dec 2010 15:35:32 -0600
 
 indicator-application (0.2.90-0ubuntu3) UNRELEASED; urgency=low
 
