--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-libappindicator (0.2.92-0ubuntu1~ppa1) UNRELEASED; urgency=low
+libappindicator (0.2.92-0ubuntu1~ppa1) natty; urgency=low
 
   * New upstream release.
     * Fixes to build system to build with GTK3
     * Use the dbusmenu parser
 
- -- Ted Gould <ted@ubuntu.com>  Thu, 27 Jan 2011 14:54:17 -0600
+ -- Ted Gould <ted@ubuntu.com>  Thu, 27 Jan 2011 14:58:35 -0600
 
 libappindicator (0.2.91.1-0ubuntu1) natty; urgency=low
 
