--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-libappindicator (0.2.92-0ubuntu2) UNRELEASED; urgency=low
+libappindicator (0.2.92-0ubuntu2) natty; urgency=low
 
   * debian/control, debian/rules
     - Include new binaries for gtk3 builds
