--- a/debian/changelog
+++ b/debian/changelog
@@ -9,8 +9,10 @@ libappindicator (0.2.95-0ubuntu1~ppa1) UNRELEASED; urgency=low
     ∘ Fixing build for GTK2/3 dual build
   * debian/libappindicator-dev.install, debian/libappindicator3-dev.install:
     switching the file name of the vapi files.
+  * debian/rules: Not building libappindicator3-dev until we've got the GTK3
+    build all put together.
 
- -- Ted Gould <ted@ubuntu.com>  Thu, 10 Feb 2011 22:29:47 -0600
+ -- Ted Gould <ted@ubuntu.com>  Thu, 10 Feb 2011 22:39:44 -0600
 
 libappindicator (0.2.92-0ubuntu2) natty; urgency=low
 
