releasing version 0.2.96-0ubuntu1~ppa1

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-libappindicator (0.2.96-0ubuntu1~ppa1) UNRELEASED; urgency=low
+libappindicator (0.2.96-0ubuntu1~ppa1) natty; urgency=low
 
   * New upstream release.
     * Add support for accessible descriptions
     * Move deregistration of object later to send final signals
 
- -- Ted Gould <ted@ubuntu.com>  Thu, 24 Feb 2011 16:01:24 -0600
+ -- Ted Gould <ted@ubuntu.com>  Thu, 24 Feb 2011 16:06:43 -0600
 
 libappindicator (0.2.95-0ubuntu3) natty; urgency=low
 
