Remove unused libmono-dev build-dependency (for Mono 2.10 transition).

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ libappindicator (0.3.0-0ubuntu2) UNRELEASED; urgency=low
 
   * Call dh_python2 from binary-fixup rather than binary-predeb, so that
     generated maintainer script snippets actually end up in the package.
+  * Remove unused libmono-dev build-dependency (for Mono 2.10 transition).
 
  -- Colin Watson <cjwatson@ubuntu.com>  Tue, 21 Jun 2011 17:13:49 +0100
 
