--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-libappindicator (0.3.0-0ubuntu2) UNRELEASED; urgency=low
+libappindicator (0.3.0-0ubuntu2) oneiric; urgency=low
 
   * Call dh_python2 from binary-fixup rather than binary-predeb, so that
     generated maintainer script snippets actually end up in the package.
   * Remove unused libmono-dev build-dependency (for Mono 2.10 transition).
 
- -- Colin Watson <cjwatson@ubuntu.com>  Tue, 21 Jun 2011 17:13:49 +0100
+ -- Colin Watson <cjwatson@ubuntu.com>  Tue, 21 Jun 2011 17:50:12 +0100
 
 libappindicator (0.3.0-0ubuntu1) natty; urgency=low
 
