releasing version 0.3.90-0ubuntu1~ppa1

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-libappindicator (0.3.90-0ubuntu1~ppa1) UNRELEASED; urgency=low
+libappindicator (0.3.90-0ubuntu1~ppa1) oneiric; urgency=low
 
   * New upstream release.
-    * Fix a memory leak (LP: #) 
+    * Fix a memory leak (LP: #784327) 
     * Port to libindicator 0.4
 
- -- Ted Gould <ted@ubuntu.com>  Thu, 07 Jul 2011 15:14:05 -0500
+ -- Ted Gould <ted@ubuntu.com>  Thu, 07 Jul 2011 15:21:12 -0500
 
 libappindicator (0.3.0-0ubuntu3) oneiric; urgency=low
 
