--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-libappindicator (0.4.1-0ubuntu4) UNRELEASED; urgency=low
+libappindicator (0.4.1-0ubuntu4) precise; urgency=low
 
   * rebuild for libindicator7
   * bindings/python/Makefile.am
@@ -10,7 +10,7 @@ libappindicator (0.4.1-0ubuntu4) UNRELEASED; urgency=low
   * debian/libappindicator1.symbols, debian/libappindicator3-1.symbols
     - added symbols
 
- -- Ken VanDine <ken.vandine@canonical.com>  Tue, 24 Jan 2012 12:58:34 -0500
+ -- Ken VanDine <ken.vandine@canonical.com>  Wed, 25 Jan 2012 09:49:38 -0500
 
 libappindicator (0.4.1-0ubuntu3) precise; urgency=low
 
