deibna/*symbols: Updated to add [set|get]_title functions

--- a/debian/changelog
+++ b/debian/changelog
@@ -7,8 +7,9 @@ libappindicator (0.4.90-0ubuntu1~ppa1) UNRELEASED; urgency=low
     * Don't specify pyglib-2.0-python2.6 in LDFLAGS
     * fix fallback icon of the GtkStatusIcon (LP: #820080)
   * debian/control: Dbusmneu Dep to 0.5.90
+  * deibna/*symbols: Updated to add [set|get]_title functions
 
- -- Ted Gould <ted@ubuntu.com>  Fri, 03 Feb 2012 14:50:33 -0600
+ -- Ted Gould <ted@ubuntu.com>  Fri, 03 Feb 2012 14:55:33 -0600
 
 libappindicator (0.4.1-0ubuntu4) precise; urgency=low
 
