releasing version 0.4.90-0ubuntu1~ppa1

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-libappindicator (0.4.90-0ubuntu1~ppa1) UNRELEASED; urgency=low
+libappindicator (0.4.90-0ubuntu1~ppa1) precise; urgency=low
 
   * New upstream release.
     * Fix include with Dbusmenu 0.5.90
@@ -9,7 +9,7 @@ libappindicator (0.4.90-0ubuntu1~ppa1) UNRELEASED; urgency=low
   * debian/control: Dbusmneu Dep to 0.5.90
   * deibna/*symbols: Updated to add [set|get]_title functions
 
- -- Ted Gould <ted@ubuntu.com>  Fri, 03 Feb 2012 14:55:33 -0600
+ -- Ted Gould <ted@ubuntu.com>  Fri, 03 Feb 2012 15:04:46 -0600
 
 libappindicator (0.4.1-0ubuntu4) precise; urgency=low
 
