--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-libappindicator (0.4.91-0ubuntu1~ppa1) UNRELEASED; urgency=low
+libappindicator (0.4.91-0ubuntu1~ppa1) precise; urgency=low
 
   * New upstream release.
     * Set name and title in fallback status item (LP: #885080)
@@ -8,7 +8,7 @@ libappindicator (0.4.91-0ubuntu1~ppa1) UNRELEASED; urgency=low
     * Fix test suite to work with libindicator 0.4.93
     * Fix the mono binding properties
 
- -- Ted Gould <ted@ubuntu.com>  Fri, 09 Mar 2012 12:09:35 -0600
+ -- Ted Gould <ted@ubuntu.com>  Fri, 09 Mar 2012 12:17:14 -0600
 
 libappindicator (0.4.90-0ubuntu2) precise; urgency=low
 
