--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,9 @@
 libappindicator (0.4.91-0ubuntu1) UNRELEASED; urgency=low
 
+  * debian/rules:
+    - run make check during the build
+
+  [ Ted Gould ]
   * New upstream release.
     * Set name and title in fallback status item (LP: #885080)
     * Fix build in non-source dir cases (LP: #931764)
@@ -8,7 +12,7 @@ libappindicator (0.4.91-0ubuntu1) UNRELEASED; urgency=low
     * Fix test suite to work with libindicator 0.4.93
     * Fix the mono binding properties
 
- -- Ted Gould <ted@ubuntu.com>  Fri, 09 Mar 2012 12:17:14 -0600
+ -- Sebastien Bacher <seb128@ubuntu.com>  Fri, 09 Mar 2012 19:45:54 +0100
 
 libappindicator (0.4.90-0ubuntu2) precise; urgency=low
 
