* debian/control:   - Update style: use trailing commas at the end of dependency lists.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+libappindicator (12.10.0-0ubuntu2) UNRELEASED; urgency=low
+
+  * debian/control:
+    - Update style: use trailing commas at the end of dependency lists.
+
+ -- Mathieu Trudel-Lapierre <mathieu-tl@ubuntu.com>  Mon, 26 Nov 2012 11:02:18 -0500
+
 libappindicator (12.10.0-0ubuntu1) quantal; urgency=low
 
   * New upstream release.
