--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,7 @@ libappindicator (12.10.0-0ubuntu2) UNRELEASED; urgency=low
     - Update style: use trailing commas at the end of dependency lists.
     - Reorganize Build-Depends for clarity.
     - Bump Build-Depends on debhelper to (>= 9).
+  * debian/compat: bump to compat level 9.
 
  -- Mathieu Trudel-Lapierre <mathieu-tl@ubuntu.com>  Mon, 26 Nov 2012 11:02:18 -0500
 
