--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,8 @@ libappindicator (12.10.1-0ubuntu1) UNRELEASED; urgency=low
   * debian/compat: bump to compat level 9.
   * debian/rules:
     - Convert from cdbs to debhelper 9.
+  * debian/*.install:
+    - Update paths for multiarch and for use with dh9 (remove debian/tmp...)
 
  -- Mathieu Trudel-Lapierre <mathieu-tl@ubuntu.com>  Mon, 26 Nov 2012 11:02:18 -0500
 
