--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,7 @@ libappindicator (12.10.1-0ubuntu1) UNRELEASED; urgency=low
     - Bump Build-Depends on debhelper to (>= 9).
     - Drop Build-Depends on cdbs.
     - Drop old Conflicts, Replaces, Provides for old unsupported upgrade paths.
+    - Update Vcs-Bzr, Vcs-Browser and add a notice to uploaders.
   * debian/compat: bump to compat level 9.
   * debian/rules:
     - Convert from cdbs to debhelper 9.
