Add a Pre-Depends on multiarch-support for libappindicator(3-)7.

--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,7 @@ libappindicator (12.10.1-0ubuntu1) UNRELEASED; urgency=low
     - Drop Build-Depends on cdbs.
     - Drop old Conflicts, Replaces, Provides for old unsupported upgrade paths.
     - Update Vcs-Bzr, Vcs-Browser and add a notice to uploaders.
+    - Add a Pre-Depends on multiarch-support for libappindicator(3-)7.
   * debian/compat: bump to compat level 9.
   * debian/rules:
     - Convert from cdbs to debhelper 9.
