--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+libappindicator (12.10.1daily13.04.13-0ubuntu2) UNRELEASED; urgency=low
+
+  * Install appindicator-sharp's pcfile into /usr/share/pkgconfig as this is
+    an arch:all package and library. Update the assemblydir variable in this
+    pcfile to refer to the correct location for the library instead of an
+    incorrect multiarch directory.
+
+ -- Iain Lane <iain.lane@canonical.com>  Wed, 10 Apr 2013 12:57:58 +0100
+
 libappindicator (12.10.1daily13.03.13-0ubuntu1) raring; urgency=low
 
   [ Sebastien Bacher ]
