--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+libappindicator (12.10.1+13.10.20130920-0ubuntu2) UNRELEASED; urgency=low
+
+  * Don't build the mono bindings on AArch64, not available. (LP:
+    #1239474)
+
+ -- Matthias Klose <doko@ubuntu.com>  Mon, 14 Oct 2013 01:47:10 +0200
+
 libappindicator (12.10.1+13.10.20130920-0ubuntu1) saucy; urgency=low
 
   * Automatic snapshot from revision 266
