--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libayatana-appindicator (0.5.0-0) UNRELEASED; urgency=medium
+
+  * Fork from Ubuntu's libappindicator project.
+
+ -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Mon, 09 Nov 2015 14:00:48 +0000
+
 libappindicator (12.10.1+15.04.20141110-0ubuntu1) vivid; urgency=low
 
   [ Lars Uebernickel ]
