--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,15 @@
-libayatana-appindicator (0.5.0-0) UNRELEASED; urgency=medium
+libayatana-appindicator (0.5.1-0) unstable; urgency=medium
+
+  * Upstream-provided Debian package for nx-libs.
+    See upstream ChangeLog for recent changes.
+
+ -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Sat, 23 Sep 2017 01:15:21 +0200
+
+libayatana-appindicator (0.5.0-0) unstable; urgency=medium
 
   * Fork from Ubuntu's libappindicator project.
 
- -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Mon, 09 Nov 2015 14:00:48 +0000
+ -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Mon, May 22 16:16:06 2017 +0200
 
 libappindicator (12.10.1+15.04.20141110-0ubuntu1) vivid; urgency=low
 
