--- a/debian/changelog
+++ b/debian/changelog
@@ -9,7 +9,7 @@ libayatana-appindicator (0.5.0-0) unstable; urgency=medium
 
   * Fork from Ubuntu's libappindicator project.
 
- -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Mon, May 22 16:16:06 2017 +0200
+ -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Mon, 22 May 2017 16:16:06 +0200
 
 libappindicator (12.10.1+15.04.20141110-0ubuntu1) vivid; urgency=low
 
