--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,6 @@
 libayatana-appindicator (0.5.1-0) unstable; urgency=medium
 
-  * Upstream-provided Debian package for nx-libs.
+  * Upstream-provided Debian package for libayatana-appindicator.
     See upstream ChangeLog for recent changes.
 
  -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Sat, 23 Sep 2017 01:15:21 +0200
