--- a/debian/changelog
+++ b/debian/changelog
@@ -10,7 +10,7 @@ libayatana-appindicator (0.5.3-0) unstable; urgency=medium
   * Upstream-provided Debian package for libayatana-appindicator.
     See upstream ChangeLog for recent changes.
 
- -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Tue, 20 Mar 2018 11:25:55 *0100
+ -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Tue, 20 Mar 2018 11:25:55 +0100
 
 libayatana-appindicator (0.5.2-0) unstable; urgency=medium
 
