--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+libayatana-appindicator (0.5.90-0) UNRELEASED; urgency=medium
+
+  * Upstream-provided Debian package for libayatana-appindicator.
+    See upstream ChangeLog for recent changes.
+
+ -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Thu, 10 Jun 2021 22:01:34 +0200
+
 libayatana-appindicator (0.5.5-0) unstable; urgency=medium
 
   * Upstream-provided Debian package for libayatana-appindicator.
