--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-libayatana-appindicator (0.5.90-0) UNRELEASED; urgency=medium
+libayatana-appindicator (0.5.90-0) unstable; urgency=medium
 
   * Upstream-provided Debian package for libayatana-appindicator.
     See upstream ChangeLog for recent changes.
 
- -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Thu, 10 Jun 2021 22:01:34 +0200
+ -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Thu, 18 Nov 2021 10:23:28 +0100
 
 libayatana-appindicator (0.5.5-0) unstable; urgency=medium
 
