--- a/AUTHORS
+++ b/AUTHORS
@@ -28,6 +28,7 @@ Ken VanDine <ken.vandine@canonical.com>
 Krzysztof Klimonda <kklimonda@laptop>
 Krzysztof Klimonda <kklimonda@syntaxhighlighted.com>
 Lars Uebernickel <lars.uebernickel@canonical.com>
+Luca Weiss <luca@z3ntu.xyz>
 Łukasz 'sil2100' Zemczak <lukasz.zemczak@canonical.com>
 Luke Yelavich <luke.yelavich@canonical.com>
 Marco Trevisan (Treviño) <mail@3v1n0.net>
