--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+libayatana-appindicator (0.5.93-0) unstable; urgency=medium
+
+  * Upstream-provided Debian package for libayatana-appindicator.
+    See upstream ChangeLog for recent changes.
+
+ -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Fri, 13 Oct 2023 08:41:36 +0200
+
 libayatana-appindicator (0.5.92-0) unstable; urgency=medium
 
   * Upstream-provided Debian package for libayatana-appindicator.
