--- a/AUTHORS
+++ b/AUTHORS
@@ -54,6 +54,8 @@ Sense Hofstede <qense@ubuntu.com>
 Sense Hofstede <sense@ubuntu.com>
 Ted Gould <ted@canonical.com>
 Ted Gould <ted@gould.cx>
+Till Maas <opensource@till.name>
 unknown <evgeni@debian.org>
 unknown <robert.ancell@canonical.com>
+William Pettersson <william.pettersson@glasgow.ac.uk>
 Артём Попов <artfwo@gmail.com>
