--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,5 @@
 Alberts Muktupāvels <alberts.muktupavels@gmail.com>
+Alfred Wingate <parona@protonmail.com>
 Allan LeSage <allanlesage@gmail.com>
 Aurélien Gâteau <agateau@canonical.com>
 Aurelien Gateau <aurelien.gateau@canonical.com>
@@ -52,6 +53,7 @@ Sebastien Bacher <seb128@ubuntu.com>
 Sense Egbert Hofstede <sense@ubuntu.com>
 Sense Hofstede <qense@ubuntu.com>
 Sense Hofstede <sense@ubuntu.com>
+Sergey Fedorov <barracuda@macos-powerpc.org>
 Ted Gould <ted@canonical.com>
 Ted Gould <ted@gould.cx>
 Till Maas <opensource@till.name>
